@@ -7,15 +7,17 @@ package com.bitpay.sdk.model.Rate;
 
 import com.bitpay.sdk.Client;
 import com.bitpay.sdk.exceptions.RateQueryException;
+import java.util.Arrays;
+import java.util.Collections;
 import java.util.List;
-import org.junit.Assert;
-import org.junit.Test;
-import org.junit.runner.RunWith;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.Mock;
 import org.mockito.Mockito;
-import org.mockito.junit.MockitoJUnitRunner;
+import org.mockito.junit.jupiter.MockitoExtension;
 
-@RunWith(MockitoJUnitRunner.class)
+@ExtendWith(MockitoExtension.class)
 public class RatesTest {
 
     @Mock
@@ -30,14 +32,14 @@ public class RatesTest {
     @Test
     public void it_should_return_rates() {
         // given
-        List<Rate> rates = List.of(rate1);
+        List<Rate> rates = Collections.singletonList(rate1);
         Rates testedClass = getTestedClass(rates);
 
         // when
         List<Rate> result = testedClass.getRates();
 
         // then
-        Assert.assertEquals(rates, result);
+        Assertions.assertEquals(rates, result);
     }
 
     @Test
@@ -50,21 +52,21 @@ public class RatesTest {
         Mockito.when(rate2.getCode()).thenReturn(btc);
         Mockito.when(rate2.getValue()).thenReturn(btcValue);
 
-        List<Rate> rates = List.of(rate1, rate2);
+        List<Rate> rates = Arrays.asList(rate1, rate2);
         Rates testedClass = getTestedClass(rates);
 
         // when
         final double result = testedClass.getRate(btc);
 
         // then
-        Assert.assertEquals(btcValue, result, 0);
+        Assertions.assertEquals(btcValue, result, 0);
     }
 
     @Test
     public void it_should_update_rates() throws RateQueryException {
         // given
-        List<Rate> rates = List.of(rate1, rate2);
-        List<Rate> expectedRates = List.of(rate1);
+        List<Rate> rates = Arrays.asList(rate1, rate2);
+        List<Rate> expectedRates = Collections.singletonList(rate1);
         Rates expectedRatesObject = new Rates(expectedRates, this.client);
         Rates testedClass = this.getTestedClass(rates);
         Mockito.when(this.client.getRates()).thenReturn(expectedRatesObject);
@@ -73,8 +75,7 @@ public class RatesTest {
         testedClass.update();
 
         // then
-        Assert.assertSame(expectedRates, testedClass.getRates());
-
+        Assertions.assertSame(expectedRates, testedClass.getRates());
     }
 
     private Rates getTestedClass(List<Rate> rates) {
